--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="icon" href="/assets/img/logo.png">
   <title>Document</title>
 </head>
 
@@ -18,9 +19,10 @@
 
   <div class="index">
     <nav>
+
       <ul class="nav nav-pills nav-fill py-2">
         <li class="nav-item lead">
-          <a class="nav-link" href="#">ESCHOOL</a>
+          <a class="nav-link" href="#">E-School/Edutopía</a>
         </li>
         <li class="nav-item lead">
           <a class="nav-link" href="#">Longer nav link</a>
@@ -28,22 +30,28 @@
         <li class="nav-item lead">
           <a class="nav-link" href="#">Link</a>
         </li>
-        
+
       </ul>
     </nav>
-  </div>
 
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Fluid jumbotron</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Calculá instantáneamente tu promedio</h1>
+        <h3>No te lleves ninguna sorpesa, sacate la duda ya.</h3>
+      </div>
+      <button onclick="promediar()">Empezar</button>
+
     </div>
+
+
   </div>
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+        <svg class="bi" width="30" height="24">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
       </a>
       <span class="text-muted">© 2021 Company, Inc</span>
     </div>
