--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
   <link rel="icon" href="/assets/img/logo.png">
-  <title>Document</title>
+  <title>Edutopía</title>
 </head>
 
 <body>
@@ -22,15 +22,8 @@
 
       <ul class="nav nav-pills nav-fill py-2">
         <li class="nav-item lead">
-          <a class="nav-link" href="#">E-School/Edutopía</a>
+          <a class="nav-link" href="#">Edutopía</a>
         </li>
-        <li class="nav-item lead">
-          <a class="nav-link" href="#">Longer nav link</a>
-        </li>
-        <li class="nav-item lead">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-
       </ul>
     </nav>
 
@@ -39,9 +32,9 @@
         <h1 class="display-4">Calculá instantáneamente tu promedio</h1>
         <h3>No te lleves ninguna sorpesa, sacate la duda ya.</h3>
       </div>
-      <button onclick="promediar()">Empezar</button>
-
+      <button onclick="promediar()">Calcular promedio</button>
     </div>
+    <h1>Querés enviar tu perfil estudiantil con tu promedio ya calculado a un consultor para averiguar a que universidades podrías ingresar?</h1>
   </div>
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
@@ -51,7 +44,7 @@
           <use xlink:href="#bootstrap"></use>
         </svg>
       </a>
-      <span class="text-muted">© 2021 Company, Inc</span>
+      <span class="text-muted">© 2021, Julieta Di Cio</span>
     </div>
   </footer>
 
