--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <button onclick="promediar()">Calcular promedio</button>
     </div>
-    <h1>Querés enviar tu perfil estudiantil con tu promedio ya calculado a un consultor para averiguar a que universidades podrías ingresar?</h1>
+    <h1>Querés enviar tu perfil estudiantil con tu promedio a un consultor para averiguar a que universidades podrías ingresar?</h1>
   </div>
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
