Agregando arrays para guardar datos de varios estudiantes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       <button onclick="promediar()">Calcular promedio</button>
     </div>
     <h1>Querés enviar tu perfil estudiantil con tu promedio a un consultor para averiguar a que universidades podrías ingresar?</h1>
+    
+      <input id="nombre" type="text" placeholder="Ingresá tu nombre">
+      <input id="promedio" type="number" placeholder="Ingresá tu promedio">
+      <button onclick="universidad()">Averiguar</button>
+      <button id="agregarEstudiante">Agregar estudiante</button>
+    
+
+
   </div>
 
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
