--- a/index.html
+++ b/index.html
@@ -20,11 +20,40 @@
   <div class="index">
     <nav>
 
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <input id="loginNombre" type="text" placeholder="Nombre">
+              <input id="loginApellido" type="text" placeholder="Apellido">
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Log In</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <ul class="nav nav-pills nav-fill py-2">
         <li class="nav-item lead">
           <a class="nav-link" href="#">Edutopía</a>
         </li>
+        <li>
+          <button type="button" class="btn btn-primary login" data-toggle="modal" data-target="#exampleModal">
+            Log In
+          </button>
+        </li>
       </ul>
+
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
@@ -34,14 +63,29 @@
       </div>
       <button onclick="promediar()">Calcular promedio</button>
     </div>
-    <h1>Querés enviar tu perfil estudiantil con tu promedio a un consultor para averiguar a que universidades podrías ingresar?</h1>
-    
-      <input id="nombre" type="text" placeholder="Ingresá tu nombre">
-      <input id="promedio" type="number" placeholder="Ingresá tu promedio">
-      <button onclick="universidad()">Averiguar</button>
-      <button id="agregarEstudiante">Agregar estudiante</button>
-    
 
+    <div>
+      <h1>Querés enviar tu perfil estudiantil con tu promedio a un consultor para averiguar a que universidades podrías
+        ingresar?</h1>
+      <form id="form" action="">
+        <input id="nombre" type="text" placeholder="Nombre">
+        <input id="apellido" type="text" placeholder="Apellido">
+        <input id="promedio" type="number" placeholder="Promedio">
+      </form>
+      <button onclick="universidad()">Averiguar</button>
+      <button onclick="agregarNuevo()">Agregar nuevo</button>
+  
+      <table class="table table-striped" id="tabla">
+        <thead>
+          <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Apellido</th>
+            <th scope="col">Promedio</th>
+            <th scope="col">Condición</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
 
   </div>
 
