--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Log In</button>
+              <button type="button" onclick="storage()" class="btn btn-primary">Log In</button>
             </div>
           </div>
         </div>
@@ -65,6 +65,7 @@
     </div>
 
     <div>
+      <h3 id="bienvenido"></h3>
       <h1>Querés enviar tu perfil estudiantil con tu promedio a un consultor para averiguar a que universidades podrías
         ingresar?</h1>
       <form id="form" action="">
