cambiando link css

--- a/index.html
+++ b/index.html
@@ -90,8 +90,16 @@
           </tr>
         </thead>
       </table>
-      <div id="moreInfo">
-        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, ex!</h1>
+
+      <h1>Te hicimos un modelo de ensayo para tu presentación a las universidades de tu gusto.</h1>
+
+      <button id="btnCarta">
+        Generar carta
+      </button>
+
+      <div id="modal">
+        <h2 id="nombreModal"></h2>
+        <h3 id="promedioModal"></h3>
       </div>
     </div>
 
@@ -104,7 +112,7 @@
           <use xlink:href="#bootstrap"></use>
         </svg>
       </a>
-      <span class="text-muted">© 2021, Julieta Di Cio</span>
+      <span class="text-muted">© 2022, Julieta Di Cio</span>
     </div>
   </footer>
 
