agregando carta presentacion

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <input id="nombre" type="text" placeholder="Nombre">
         <input id="apellido" type="text" placeholder="Apellido">
         <input id="promedio" type="number" placeholder="Promedio">
+        <input type="text" id="universidad" placeholder='Universidad que desea aplicar'>
       </form>
       <button onclick="universidad()">Averiguar</button>
       <button onclick="agregarNuevo()">Agregar nuevo</button>
@@ -86,6 +87,7 @@
             <th scope="col">Nombre</th>
             <th scope="col">Apellido</th>
             <th scope="col">Promedio</th>
+            <th scope="col">Universidad</th>
             <th scope="col">Condición</th>
           </tr>
         </thead>
@@ -100,6 +102,7 @@
       <div id="modal">
         <h2 id="nombreModal"></h2>
         <h3 id="promedioModal"></h3>
+        <h3 id="universidadModal"></h3>
       </div>
     </div>
 
