cambiando localStorage por sessionStorage

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </thead>
       </table>
 
-      <h1>Te hicimos un modelo de ensayo para tu presentación a las universidades de tu gusto.</h1>
+      <h1>Te hicimos un modelo de ensayo para tu presentación a la universidad de tu gusto.</h1>
 
       <button id="btnCarta">
         Generar carta
