--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
           </tr>
         </thead>
       </table>
-
+    </div>
+    <div>
       <h1>Te hicimos un modelo de ensayo para tu presentación a la universidad de tu gusto.</h1>
 
       <button id="btnCarta">
@@ -103,6 +104,7 @@
         <h2 id="nombreModal"></h2>
         <h3 id="promedioModal"></h3>
         <h3 id="universidadModal"></h3>
+        <button id="send">Enviar</button>
       </div>
     </div>
 
@@ -120,6 +122,7 @@
   </footer>
 
   <script src="script.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
