iniciando uso de apis

--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
       </ul>
 
     </nav>
-
     <div class="jumbotron jumbotron-fluid">
       <h4 id="bienvenido"></h4>
       <div class="container">
@@ -107,6 +106,9 @@
         <button id="send">Enviar</button>
       </div>
     </div>
+
+    <h2>Necesitas un recreo de tanto estrés? Te brindamos una lista de actividades recreacionales para descansar el cerebro.</h2>
+    <li id="listado"></li>
 
   </div>
 
