--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <div class="jumbotron jumbotron-fluid">
       <h4 id="bienvenido"></h4>
       <div class="container">
+        <img src="/assets/img/Calculator-rafiki.png">
         <h1 class="display-4">Calculá instantáneamente tu promedio</h1>
         <h3>No te lleves ninguna sorpesa, sacate la duda ya.</h3>
         <label for="">1er trimestre</label><input type="number" id="1trim">
@@ -107,8 +108,13 @@
       </div>
     </div>
 
-    <h2>Necesitas un recreo de tanto estrés? Te brindamos una lista de actividades recreacionales para descansar el cerebro.</h2>
-    <li id="listado"></li>
+    <div class="actividad">
+      <img src="/assets/img/Fishing-amico.png" alt="">
+      <h2>Necesitas un recreo de tanto estrés, o querés aprender más habilidades para mejorar tus opciones universitarias? 
+      Te brindamos una lista de actividades para expandir o descansar tu mente.</h2>
+      <div id="api"></div>
+      <p id="precioApi"></p>
+    </div>
 
   </div>
 
