cambiando toques finales del proyecto

--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -40,22 +40,24 @@
     </div>
   </div>
 
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link" href="/index.html">Promedio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="universidad.html">Universidad</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="">Actividades</a>
-        </li>
-        <li>
-            <button type="button" class="btn btn-primary login" data-toggle="modal" data-target="#exampleModal">
-                Log In
-            </button>
-        </li>
-    </ul>
+  <nav>
+      <ul class="nav justify-content-center">
+          <li class="nav-item">
+              <a class="nav-link" href="/index.html">Promedio</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="universidad.html">Universidad</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="">Actividades</a>
+          </li>
+          <li>
+              <button type="button" class="btn btn-primary login" data-toggle="modal" data-target="#exampleModal">
+                  Log In
+              </button>
+          </li>
+      </ul>
+  </nav>
 
     <div class="actividad">
         <h4 id="bienvenido"></h4>
