--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
 <body>
 
   <div class="index">
-    <nav>
-
-      <!-- Modal -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Log In</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <input id="loginNombre" type="text" placeholder="Nombre">
-              <input id="loginApellido" type="text" placeholder="Apellido">
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" onclick="storage()" id="verBienvenida" class="btn btn-primary">Log In</button>
-            </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Log In</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <input id="loginNombre" type="text" placeholder="Nombre">
+            <input id="loginApellido" type="text" placeholder="Apellido">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" onclick="storage()" id="verBienvenida" class="btn btn-primary">Log In</button>
           </div>
         </div>
       </div>
+    </div>
 
+
+    <nav>
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link" href="#">Edutopía</a>
@@ -73,7 +73,8 @@
         <h2 id="verPromedio"></h2>
       </div>
       <button id="promediar" onclick="promediar()">Calcular promedio</button>
-      <h2 class="mt-4">Con tu promedio ya calculado, podes ir a la solapa de universidad para ver las funcionalidades que te brindamos.</h2>
+      <h2 class="mt-4">Con tu promedio ya calculado, podes ir a la solapa de universidad para ver las funcionalidades
+        que te brindamos.</h2>
     </div>
 
   </div>
