--- a/pages/universidad.html
+++ b/pages/universidad.html
@@ -16,22 +16,24 @@
 </head>
 
 <body>
-    <ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link" href="/index.html">Promedio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="">Universidad</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="actividades.html">Actividades</a>
-        </li>
-        <li>
-            <button type="button" class="btn btn-primary login" data-toggle="modal" data-target="#exampleModal">
-                Log In
-            </button>
-        </li>
-    </ul>
+    <nav>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link" href="/index.html">Promedio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Universidad</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="actividades.html">Actividades</a>
+            </li>
+            <li>
+                <button type="button" class="btn btn-primary login" data-toggle="modal" data-target="#exampleModal">
+                    Log In
+                </button>
+            </li>
+        </ul>
+    </nav>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -57,7 +59,6 @@
     </div>
 
     <div class="jumbotron jumbotron-fluid">
-
         <div>
             <div class="container">
                 <h4 id="bienvenido"></h4>
