--- a/pages/universidad.html
+++ b/pages/universidad.html
@@ -19,13 +19,16 @@
     <nav>
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a class="nav-link" href="/index.html">Promedio</a>
+                <a class="nav-link" href="index.html">Promedio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Universidad</a>
+                <a class="nav-link">Universidad</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="actividades.html">Actividades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="clima.html">Clima</a>
             </li>
             <li>
                 <button type="button" class="btn btn-primary login" data-toggle="modal" data-target="#exampleModal">
@@ -115,7 +118,7 @@
         </div>
     </footer>
 
-    <script src="/uni.js"></script>
+    <script src="/js/uni.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
