--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
@@ -48,10 +48,13 @@
           <a class="nav-link" href="#">Edutopía</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/universidad.html">Universidad</a>
+          <a class="nav-link" href="universidad.html">Universidad</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pages/actividades.html">Actividades</a>
+          <a class="nav-link" href="actividades.html">Actividades</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="clima.html">Clima</a>
         </li>
         <li>
           <button type="button" class="btn btn-primary login" data-toggle="modal" data-target="#exampleModal">
@@ -90,7 +93,7 @@
     </div>
   </footer>
 
-  <script src="index.js"></script>
+  <script src="/js/index.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
