--- a/pages/universidad.html
+++ b/pages/universidad.html
@@ -104,6 +104,21 @@
                     <button id="send">Enviar</button>
                 </div>
             </div>
+            <div>
+                <h2>No te preocupes, guardamos el registro de todos los estudiantes que averiguaste.</h2>
+
+                <table class="table table-striped" id="guardar">
+                    <thead>
+                        <tr>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Apellido</th>
+                            <th scope="col">Promedio</th>
+                            <th scope="col">Universidad</th>
+                            <th scope="col">Condición</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
         </div>
     </div>
 
