agregando arrays a local storage

--- a/pages/universidad.html
+++ b/pages/universidad.html
@@ -106,18 +106,13 @@
             </div>
             <div>
                 <h2>No te preocupes, guardamos el registro de todos los estudiantes que averiguaste.</h2>
-
-                <table class="table table-striped" id="guardar">
-                    <thead>
-                        <tr>
-                            <th scope="col">Nombre</th>
-                            <th scope="col">Apellido</th>
-                            <th scope="col">Promedio</th>
-                            <th scope="col">Universidad</th>
-                            <th scope="col">Condición</th>
-                        </tr>
-                    </thead>
-                </table>
+                <h3>Estudiantes:</h3>
+                <div id="guardar">
+                    <p id="nombreG"></p>
+                    <p id="apellidoG"></p>
+                    <p id="promedioG"></p>
+                    <p id="universidadG"></p>
+                </div>
             </div>
         </div>
     </div>
