aplicando api de clima

--- a/pages/clima.html
+++ b/pages/clima.html
@@ -38,8 +38,16 @@
         </ul>
     </nav>
     <h1>
-        ¿Querés saber el clima de tu zona?
+        ¿Querés saber el clima de tu ciudad?
     </h1>
+    <h4>Ej: Buenos Aires, New York, Brasilia...</h4>
+    <div class="searchC">
+        <input id="inputClima" type="text">
+        <button id="btnClima">Buscar</button>
+    </div>
+
+
+    <script src="/js/clima.js"></script>
 </body>
 
 </html>
