--- a/pages/clima.html
+++ b/pages/clima.html
@@ -40,13 +40,26 @@
     <h1>
         ¿Querés saber el clima de tu ciudad?
     </h1>
-    <h4>Ej: Buenos Aires, New York, Brasilia...</h4>
-    <div class="searchC">
+
+    <img src="/assets/img/Weather-rafiki.png" alt="">
+
+    <div id="searchC">
+        <h4>Ej: Buenos Aires, New York, Brasilia, Montevideo...</h4>
         <input id="inputClima" type="text">
         <button id="btnClima">Buscar</button>
+        <div id="verClima"></div>
     </div>
 
-
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
+            <span class="text-muted">© 2022, Julieta Di Cio</span>
+        </div>
+    </footer>
     <script src="/js/clima.js"></script>
 </body>
 
