modificando imagen api clima

--- a/pages/clima.html
+++ b/pages/clima.html
@@ -44,7 +44,7 @@
     <img src="/assets/img/Weather-rafiki.png" alt="">
 
     <div id="searchC">
-        <h4>Ej: Buenos Aires, New York, Brasilia, Montevideo...</h4>
+        <h4>Ej: Buenos Aires, Nueva York, Brasilia, Montevideo...</h4>
         <input id="inputClima" type="text">
         <button id="btnClima">Buscar</button>
         <div id="verClima"></div>
