--- a/pages/universidad.html
+++ b/pages/universidad.html
@@ -66,7 +66,7 @@
             <div class="container">
                 <h4 id="bienvenido"></h4>
                 <img src="/assets/img/Graduation-rafiki.png" alt="" srcset="">
-                <h1 class="display-4">Querés ver la condición de tu perfil estudiantil para averiguar a que
+                <h1 class="display-4">¿Querés ver la condición de tu perfil estudiantil para averiguar a que
                     universidades podrías
                     ingresar? También podes consultar por tus amigos.</h1>
                 <form id="form" action="">
@@ -102,16 +102,6 @@
                     <h3 id="promedioModal"></h3>
                     <h3 id="universidadModal"></h3>
                     <button id="send">Enviar</button>
-                </div>
-            </div>
-            <div>
-                <h2>No te preocupes, guardamos el registro de todos los estudiantes que averiguaste.</h2>
-                <h3>Estudiantes:</h3>
-                <div id="guardar">
-                    <p id="nombreG"></p>
-                    <p id="apellidoG"></p>
-                    <p id="promedioG"></p>
-                    <p id="universidadG"></p>
                 </div>
             </div>
         </div>
