--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -70,19 +70,16 @@
             Te brindamos una lista de actividades para expandir o descansar tu mente.</h2>
         <div id="api"></div>
         <p id="precioApi"></p>
+        <p id="linkApi"></p>
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                
+                <span class="text-muted">© 2022, Julieta Di Cio</span>
+            </div>
+        </footer>
     </div>
 
 
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <svg class="bi" width="30" height="24">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
-            <span class="text-muted">© 2022, Julieta Di Cio</span>
-        </div>
-    </footer>
 
     <script src="/js/act.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
