--- a/pages/clima.html
+++ b/pages/clima.html
@@ -37,29 +37,30 @@
             </li>
         </ul>
     </nav>
-    <h1>
-        ¿Querés saber el clima de tu ciudad?
-    </h1>
+    <div class="clima">
+        <h1>
+            ¿Querés saber el clima de tu ciudad?
+        </h1>
 
-    <img src="/assets/img/Weather-rafiki.png" alt="">
+        <img src="/assets/img/Weather-rafiki.png" alt="">
 
-    <div id="searchC">
-        <h4>Ej: Buenos Aires, Nueva York, Brasilia, Montevideo...</h4>
-        <input id="inputClima" type="text">
-        <button id="btnClima">Buscar</button>
-        <div id="verClima"></div>
-    </div>
-
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
-            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                <svg class="bi" width="30" height="24">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
-            <span class="text-muted">© 2022, Julieta Di Cio</span>
+        <div id="searchC">
+            <input id="inputClima" type="text">
+            <button id="btnClima">Buscar</button>
+            <div id="verClima"></div>
         </div>
-    </footer>
+
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                    <svg class="bi" width="30" height="24">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+                <span class="text-muted">© 2022, Julieta Di Cio</span>
+            </div>
+        </footer>
+    </div>
     <script src="/js/clima.js"></script>
 </body>
 
