--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="../../assets/css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="/assets/img/logo.png">
+    <link rel="icon" href="../../assets/img/logo.png">
 </head>
 
 <body>
@@ -64,7 +64,7 @@
 
     <div class="actividad">
         <h4 id="bienvenido"></h4>
-        <img src="/assets/img/Fishing-amico.png" alt="">
+        <img src="../../assets/img/Fishing-amico.png" alt="">
         <h2>Necesitas un recreo de tanto estrés, o querés aprender más habilidades para mejorar tus opciones
             universitarias?
             Te brindamos una lista de actividades para expandir o descansar tu mente.</h2>
@@ -81,7 +81,7 @@
 
 
 
-    <script src="/js/act.js"></script>
+    <script src="../js/act.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
