--- a/pages/clima.html
+++ b/pages/clima.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../../assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="/assets/img/logo.png">
+    <link rel="icon" href="../../assets/img/logo.png">
     <title>Clima</title>
 </head>
 
@@ -42,7 +42,7 @@
             ¿Querés saber el clima de tu ciudad?
         </h1>
 
-        <img src="/assets/img/Weather-rafiki.png" alt="">
+        <img src="../../assets/img/Weather-rafiki.png" alt="">
 
         <div id="searchC">
             <input id="inputClima" type="text">
@@ -61,7 +61,7 @@
             </div>
         </footer>
     </div>
-    <script src="/js/clima.js"></script>
+    <script src="../js/clima.js"></script>
 </body>
 
 </html>
