--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="icon" href="/assets/img/logo.png">
+  <link rel="icon" href="../../assets/img/logo.png">
   <title>Edutopía</title>
 </head>
 
@@ -67,7 +67,7 @@
     <div class="jumbotron jumbotron-fluid">
       <h4 id="bienvenido"></h4>
       <div class="container">
-        <img src="/assets/img/Calculator-rafiki.png">
+        <img src="../../assets/img/Calculator-rafiki.png">
         <h1 class="display-4">Calculá instantáneamente tu promedio</h1>
         <h2>No te lleves ninguna sorpesa, sacate la duda ya.</h2>
         <div id="inputsLabels">
