--- a/pages/universidad.html
+++ b/pages/universidad.html
@@ -8,11 +8,11 @@
     <title>Universidad</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="../..//assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="/assets/img/logo.png">
+    <link rel="icon" href="../../assets/img/logo.png">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
         <div>
             <div class="container">
                 <h4 id="bienvenido"></h4>
-                <img src="/assets/img/Graduation-rafiki.png" alt="" srcset="">
+                <img src="../../assets/img/Graduation-rafiki.png" alt="" srcset="">
                 <h1 class="display-4">¿Querés ver la condición de tu perfil estudiantil para averiguar a que
                     universidades podrías
                     ingresar? También podes consultar por tus amigos.</h1>
@@ -118,7 +118,7 @@
         </div>
     </footer>
 
-    <script src="/js/uni.js"></script>
+    <script src="../js/uni.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
