--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="../../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,7 +64,7 @@
 
     <div class="actividad">
         <h4 id="bienvenido"></h4>
-        <img src="../../assets/img/Fishing-amico.png" alt="">
+        <img src="../assets/img/Fishing-amico.png" alt="">
         <h2>Necesitas un recreo de tanto estrés, o querés aprender más habilidades para mejorar tus opciones
             universitarias?
             Te brindamos una lista de actividades para expandir o descansar tu mente.</h2>
